--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -13,6 +13,9 @@ $fontColor: rgba(171, 145, 120, 1);
         color: $fontColor;
         font-size: 1.6rem;
     }
+    h1{
+        font-size: 4rem;
+    }
 }
 body{
     margin: 0;
@@ -48,9 +51,10 @@ body{
     /*-------------HEADER END------------------------*/
     .main-wrapper{
         #home-page-wrapper{
+            position: relative;
             display: flex;
             background-color: $mainColor;
-            padding: 2rem 0;
+            padding: 15rem 0;
             #hp-welcome-message{
                 width: 50%;
                 display: flex;
@@ -77,15 +81,39 @@ body{
                 background-image: url("../img/home_page_pic.jpg");
                 background-size: cover;
                 width: 40%;
-                height: 80rem;
+                height: 90rem;
                 margin: 1rem auto;
                 border: 2px solid $fontColor;
             }
         }
+        #home-page-wrapper::after{
+            content: "";
+            width: 50%;
+            position: absolute;
+            bottom: 0;
+            left: 25%;
+            height: 2px;
+            background-color: $fontColor;
+        }
         /*--------HOME PAGE END----------*/
         #about-us-page-wrapper{
+            position: relative;
             padding: 15rem 0;
             background-color: $mainColor;
+            h1{
+                text-transform: uppercase;
+                letter-spacing: .3rem;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+            }
+            h1::after{
+                content: "";
+                width: 8rem;
+                height: .2rem;
+                background-color: $fontColor;
+                margin: .5rem auto;
+            }
             .container{
                 width: 80%;
                 margin: 2rem auto;
@@ -123,5 +151,146 @@ body{
                 }
             }
         }
+        #about-us-page-wrapper::after{
+            content: "";
+            width: 50%;
+            position: absolute;
+            bottom: 0;
+            left: 25%;
+            height: 2px;
+            background-color: $fontColor;
+        }
+        /*--------ABOUT US PAGE END----------*/
+        #gallery-wrapper{
+            width: 100%;
+            height: 90rem;
+            background-color: $mainColor;
+            padding: 15rem 0;
+            h1{
+                text-transform: uppercase;
+                letter-spacing: .3rem;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+            }
+            h1::after{
+                content: "";
+                width: 8rem;
+                height: .2rem;
+                background-color: $fontColor;
+                margin: .5rem auto;
+            }
+
+            @import "carousel";
+        }
+    }
+    /*-------MAIN SECTION END--------*/
+    footer{
+        height: 20rem;
+        width: 100%;
+        background-color: $mainColor;
+        padding: 5rem 0;
+        .footer-info{
+            width: 50%;
+            margin: 0 auto;
+            font-size: 3rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            address{
+                font-style: normal;
+                margin: 0;
+                width: 33%;
+                text-align: right;
+            }
+            .footer-logo{
+                background-image: url(../img/logo.svg);
+                width: 34%;
+                height: 7rem;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin: 0;
+            }
+            .footer-contact-info{
+                font-size: 3rem;
+                margin: 0;
+                width: 33%;
+            }
+        }
+        #footer-social-network{
+            width: 50%;
+            margin: 2rem auto;
+            text-align: center;
+            a{
+                margin: 0 2rem;
+                font-size: 3rem;
+            }
+        }
+    }
+}
+@keyframes carousel-animation {
+    0%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,0deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,0deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,0deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,0deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,0deg);
+    }
+    12.5%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,45deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,45deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,45deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,45deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,45deg);
+    }
+    25%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,90deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,90deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,90deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,90deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,90deg);
+    }
+    37.5%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,135deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,135deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,135deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,135deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,135deg);
+    }
+    50%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,180deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,180deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,180deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,180deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,180deg);
+    }
+    62.5%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,225deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,225deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,225deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,225deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,225deg);
+    }
+    75%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,270deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,270deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,270deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,270deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,270deg);
+    }
+    87.5%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,315deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,315deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,315deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,315deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,315deg);
+    }
+    100%{
+        -webkit-transform: translateZ(-90rem) rotate3d(0,1,0,360deg);
+        -moz-transform: translateZ(-90rem) rotate3d(0,1,0,360deg);
+        -ms-transform: translateZ(-90rem) rotate3d(0,1,0,360deg);
+        -o-transform: translateZ(-90rem) rotate3d(0,1,0,360deg);
+        transform: translateZ(-90rem) rotate3d(0,1,0,360deg);
     }
 }
