--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -121,6 +121,7 @@ body {
       body .main-wrapper #home-page-wrapper #hp-welcome-image {
         background-image: url("../img/home_page_pic.jpg");
         background-size: cover;
+        background-position: center;
         width: 40%;
         height: 90rem;
         margin: 1rem auto;
@@ -175,6 +176,7 @@ body {
           border: 1px solid #ab9178;
           background-size: cover;
           background-repeat: no-repeat;
+          background-position: center;
           opacity: 0; }
         body .main-wrapper #about-us-page-wrapper .container #about-us-first-pic {
           background-image: url(../img/about_us_wine.jpg); }
@@ -209,7 +211,8 @@ body {
       width: 100%;
       height: 90rem;
       background-color: #333333;
-      padding: 15rem 0; }
+      padding: 15rem 0;
+      overflow: hidden; }
       body .main-wrapper #gallery-wrapper h2 {
         text-align: center;
         font-weight: 400; }
@@ -311,7 +314,7 @@ body {
     background-color: #333333;
     padding: 5rem 0; }
     body footer .footer-info {
-      width: 50%;
+      width: 100%;
       margin: 0 auto;
       font-size: 3rem;
       display: flex;
@@ -418,5 +421,8 @@ body {
   100% {
     height: 13rem;
     opacity: 0.95; } }
+@media only screen and (min-width: 300px) and (max-width: 1600px) {
+  body .main-wrapper #about-us-page-wrapper .container {
+    width: 100%; } }
 
 /*# sourceMappingURL=main.css.map */
